--- a/templates/error.html
+++ b/templates/error.html
@@ -16,6 +16,7 @@
     }
     a { color: #721c24; text-decoration: underline; }
   </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
   <div class="error-box">
