--- a/templates/login.html
+++ b/templates/login.html
@@ -3,6 +3,7 @@
 <head><title>Login</title></head>
 <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='logo.png') }}">
 <link rel="stylesheet" href="/static/login.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <body>
   <h1>Login</h1>
   <form method="POST">
