update css login e register

--- a/templates/register.html
+++ b/templates/register.html
@@ -5,12 +5,14 @@
 <link rel="stylesheet" href="/static/register.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <body>
-  <h1>Cadastro</h1>
-  <form method="POST">
-    <input name="username" placeholder="Usuário" required>
-    <input name="password" type="password" placeholder="Senha" required>
-    <button type="submit">Cadastrar</button>
-  </form>
-  <p><a href="/login">Voltar ao login</a></p>
+  <div id="box">
+    <h1>Cadastro</h1>
+    <form method="POST">
+      <input name="username" placeholder="Usuário" required>
+      <input name="password" type="password" placeholder="Senha" required>
+      <button type="submit">Cadastrar</button>
+    </form>
+    <p><a href="/login">Voltar ao login</a></p>
+  </div>
 </body>
 </html>
