--- a/static/login.css
+++ b/static/login.css
@@ -1,14 +1,27 @@
 @charset "UTF-8";
 
 body{
-    background-color: rgb(59, 59, 59);
+    margin: 0;
+    padding: 0;
+    width: 100vw;
+    height: 100vh;
+    background: #8735f2;
+    background: linear-gradient(359deg, rgba(135, 53, 242, 1) 0%, rgba(106, 0, 244, 1) 56%);
     display: flex;
+    background-repeat: no-repeat;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+}
+#box{
+    background-color: white;
+    width: 300px;
+    border-radius: 10px;
 }
 h1{
+    font-weight: 800;
     text-align: center;
-    color: white;
+    color: #6A00F4;
     font-family: Arial, Helvetica, sans-serif;
 }
 form{
@@ -20,25 +33,33 @@ form{
 input{
     margin: 10px;
     height: 30px;
-    border-radius: 4px;
     border: none;
+    border-radius: 10px;
+    box-shadow:inset -1px 0px 25px -15px #8735f2;
     padding: 5px;
 }
 
 button{
-    width: 100px;
-    height: 30px;
-    border-radius: 4px;
+    font-size: 17px;
+    color: white;
+    background-color: #8735f2;
+    width: 200px;
+    height: 40px;
+    border-radius: 20px;
     border: none;
     margin-top: 7px;
 }
 
 p{
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    margin-top: 7px;
+    text-align: center;
     text-decoration: none;
 }
 
 a{
-    color: white;
+    color: #8735f2;
     text-decoration: none;
     font-size: 16px;
 }
